--- a/mapa2.html
+++ b/mapa2.html
@@ -29,18 +29,18 @@
 
       /* Pozycje kafelków */
       .tile-1 {
-        top: 20%;
-        left: 80%;
+        top: 95%;
+        left: 10%;
       }
 
       .tile-2 {
-        top: 30%;
-        left: 20%;
+        top: 95%;
+        left: 50%;
       }
 
       .tile-3 {
-        top: 50%;
-        left: 30%;
+        top: 80%;
+        left: 50%;
       }
       a {
         color: azure;
@@ -54,21 +54,21 @@
 
       .tile-5 {
         top: 80%;
-        left: 20%;
+        left: 40%;
       }
       .tile-6 {
-        top: 20%;
-        left: 50%;
+        top: 80%;
+        left: 60%;
       }
 
       .tile-7 {
-        top: 30%;
-        left: 70%;
+        top: 95%;
+        left: 80%;
       }
 
       .tile-8 {
-        top: 50%;
-        left: 10%;
+        top: 95%;
+        left: 30%;
       }
       a {
         color: azure;
@@ -76,21 +76,21 @@
       }
 
       .tile-9 {
-        top: 70%;
-        left: 60%;
+        top: 10%;
+        left: 20%;
       }
 
       .tile-10 {
-        top: 80%;
+        top: 50%;
         left: 40%;
       }
       .tile-11 {
-        top: 90%;
-        left: 45%;
+        top: 50%;
+        left: 65%;
       }
       .tile-12 {
         top: 30%;
-        left: 40%;
+        left: 30%;
       }
       .tile-13 {
         top: 10%;
@@ -98,7 +98,7 @@
       }
       .tile-14 {
         top: 50%;
-        left: 40%;
+        left: 80%;
       }
       .image-container {
         position: absolute;
@@ -142,11 +142,11 @@
       <a href="drzewo2.html"><h1>5.d4</h1></a>
     </div>
     <div class="tile tile-3">
-      <a href="drzewo2.html"><h1>5.d4 exd4</h1></a>
+      <a href="drzewo2.html"><h1>7.Sc3 Sxe4</h1></a>
     </div>
-    <div class="tile tile-4">
+    <!-- <div class="tile tile-4">
       <a href="drzewo2.html"><h1>6.cxd4</h1></a>
-    </div>
+    </div> -->
     <div class="tile tile-5">
       <a href="drzewo2.html"><h1>7.Gd2 Gxd2</h1></a>
     </div>
