--- a/mapa2.html
+++ b/mapa2.html
@@ -8,7 +8,7 @@
       body {
         background-size: cover;
 
-        background-image: url("images/drogi.jpg");
+        background-image: url("images/goblin2.png");
       }
 
       .tile {
@@ -30,7 +30,7 @@
       /* Pozycje kafelków */
       .tile-1 {
         top: 95%;
-        left: 10%;
+        left: 90%;
       }
 
       .tile-2 {
@@ -68,7 +68,7 @@
 
       .tile-8 {
         top: 95%;
-        left: 30%;
+        left: 60%;
       }
       a {
         color: azure;
@@ -132,7 +132,7 @@
       <div class="image-caption">Gandalf</div>
     </div>
     <div class="zmien3">
-      <a href="goblin.html"><button>Wróć</button></a>
+      <a href="jezioro.html"><button>Wróć</button></a>
     </div>
 
     <div class="tile tile-1">
