--- a/goblin2.html
+++ b/goblin2.html
@@ -7,7 +7,8 @@
     <style>
       body {
         background-image: url("images/goblin3.png");
-        background-size: cover;
+
+        background-position: center 10%;
       }
 
       .tile {
@@ -24,33 +25,75 @@
       }
       /* Pozycje kafelków */
       .tile-1 {
-        top: 70%;
+        top: 80%;
         left: 60%;
       }
 
       .tile-2 {
-        top: 90%;
-        left: 50%;
+        top: 80%;
+        left: 65%;
       }
 
       .tile-3 {
-        top: 70%;
-        left: 30%;
+        top: 80%;
+        left: 55%;
       }
       .tile-4 {
-        top: 40%;
-        left: 20%;
-      }
-
-      .tile-5 {
-        top: 20%;
+        top: 65%;
         left: 50%;
       }
 
-      .tile-6 {
-        top: 20%;
-        left: 80%;
+      .tile-5 {
+        top: 80%;
+        left: 75%;
       }
+
+      .tile-6 {
+        top: 80%;
+        left: 70%;
+      }
+      .tile-7 {
+        top: 65%;
+        left: 55%;
+      }
+      .tile-8 {
+        top: 65%;
+        left: 60%;
+      }
+      .tile-9 {
+        top: 65%;
+        left: 70%;
+      }
+      .tile-10 {
+        top: 65%;
+        left: 75%;
+      }
+      .tile-11 {
+        top: 65%;
+        left: 65%;
+      }
+      .tile-12 {
+        top: 65%;
+        left: 40%;
+      }
+      .tile-13 {
+        top: 65%;
+        left: 45%;
+      }
+      .tile-14 {
+        top: 80%;
+        left: 40%;
+      }
+
+      .tile-15 {
+        top: 80%;
+        left: 45%;
+      }
+      .tile-16 {
+        top: 80%;
+        left: 50%;
+      }
+
       a {
         color: azure;
         text-decoration: none;
@@ -129,7 +172,7 @@
   </head>
   <body>
     <div class="zmien3">
-      <a href="karta5.html"><button>Wróć</button></a>
+      <a href="kosmos.html"><button>Wróć</button></a>
     </div>
 
     <div>
@@ -137,52 +180,54 @@
     </div>
 
     <div class="tile tile-1">
-      <div class="tooltip">
-        <a href="drzewo1.html">
-          <img src="images/k2.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Novitius</h5></span></a
-        >
-      </div>
+      <a href="drzewo1.html">
+        <img src="images/k2.png" width="100px" height="100px" />
+      </a>
     </div>
     <div class="tile tile-2">
-      <div class="tooltip">
-        <a href="drzewo1.html">
-          <img src="images/g2.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Initiatuss</h5></span></a
-        >
-      </div>
+      <img src="images/g2.png" width="100px" height="100px" />
     </div>
     <div class="tile tile-3">
-      <div class="tooltip">
-        <a href="kraina.html">
-          <img src="images/q2.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Discipulus</h5></span></a
-        >
-      </div>
+      <img src="images/q2.png" width="100px" height="100px" />
     </div>
     <div class="tile tile-4">
-      <div class="tooltip">
-        <a href="drzewo1.html">
-          <img src="images/p2.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Peritus</h5></span></a
-        >
-      </div>
+      <img src="images/p2.png" width="100px" height="100px" />
     </div>
     <div class="tile tile-5">
-      <div class="tooltip">
-        <a href="drzewo1.html">
-          <img src="images/w2.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Expertus</h5></span></a
-        >
-      </div>
+      <img src="images/w2.png" width="100px" height="100px" />
     </div>
     <div class="tile tile-6">
-      <div class="tooltip">
-        <a href="drzewo1.html">
-          <img src="images/s2.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Magister</h5></span></a
-        >
-      </div>
+      <img src="images/s2.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-7">
+      <img src="images/p2.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-8">
+      <img src="images/p2.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-9">
+      <img src="images/p2.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-10">
+      <img src="images/p2.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-11">
+      <img src="images/p2.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-12">
+      <img src="images/p2.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-13">
+      <img src="images/p2.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-14">
+      <img src="images/w2.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-15">
+      <img src="images/s2.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-16">
+      <img src="images/g2.png" width="100px" height="100px" />
     </div>
   </body>
 </html>
