--- a/kosmos.html
+++ b/kosmos.html
@@ -178,7 +178,7 @@
     </div>
     <div class="tile tile-6">
       <div class="tooltip">
-        <a href="drzewo1.html">
+        <a href="goblin2.html">
           <img src="images/5.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Magister</h5></span></a
         >
