--- a/goblin2.html
+++ b/goblin2.html
@@ -39,7 +39,7 @@
         left: 55%;
       }
       .tile-4 {
-        top: 65%;
+        top: 67%;
         left: 50%;
       }
 
@@ -53,31 +53,31 @@
         left: 70%;
       }
       .tile-7 {
-        top: 65%;
+        top: 67%;
         left: 55%;
       }
       .tile-8 {
-        top: 65%;
+        top: 67%;
         left: 60%;
       }
       .tile-9 {
-        top: 65%;
+        top: 67%;
         left: 70%;
       }
       .tile-10 {
-        top: 65%;
+        top: 67%;
         left: 75%;
       }
       .tile-11 {
-        top: 65%;
+        top: 67%;
         left: 65%;
       }
       .tile-12 {
-        top: 65%;
+        top: 67%;
         left: 40%;
       }
       .tile-13 {
-        top: 65%;
+        top: 67%;
         left: 45%;
       }
       .tile-14 {
@@ -91,6 +91,75 @@
       }
       .tile-16 {
         top: 80%;
+        left: 50%;
+      }
+      .tile-17 {
+        top: 5%;
+        left: 60%;
+      }
+
+      .tile-18 {
+        top: 5%;
+        left: 65%;
+      }
+
+      .tile-19 {
+        top: 5%;
+        left: 55%;
+      }
+      .tile-20 {
+        top: 15%;
+        left: 50%;
+      }
+
+      .tile-21 {
+        top: 5%;
+        left: 75%;
+      }
+
+      .tile-22 {
+        top: 5%;
+        left: 70%;
+      }
+      .tile-23 {
+        top: 15%;
+        left: 55%;
+      }
+      .tile-24 {
+        top: 15%;
+        left: 60%;
+      }
+      .tile-25 {
+        top: 15%;
+        left: 70%;
+      }
+      .tile-26 {
+        top: 15%;
+        left: 75%;
+      }
+      .tile-27 {
+        top: 15%;
+        left: 65%;
+      }
+      .tile-28 {
+        top: 15%;
+        left: 40%;
+      }
+      .tile-29 {
+        top: 15%;
+        left: 45%;
+      }
+      .tile-30 {
+        top: 5%;
+        left: 40%;
+      }
+
+      .tile-31 {
+        top: 5%;
+        left: 45%;
+      }
+      .tile-32 {
+        top: 5%;
         left: 50%;
       }
 
@@ -228,6 +297,57 @@
     </div>
     <div class="tile tile-16">
       <img src="images/g2.png" width="100px" height="100px" />
+    </div>
+
+    <div class="tile tile-17">
+      <a href="drzewo1.html">
+        <img src="images/k.png" width="100px" height="100px" />
+      </a>
+    </div>
+    <div class="tile tile-18">
+      <img src="images/g.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-19">
+      <img src="images/q.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-20">
+      <img src="images/p.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-21">
+      <img src="images/w.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-22">
+      <img src="images/s.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-23">
+      <img src="images/p.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-24">
+      <img src="images/p.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-25">
+      <img src="images/p.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-26">
+      <img src="images/p.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-27">
+      <img src="images/p.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-28">
+      <img src="images/p.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-29">
+      <img src="images/p.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-30">
+      <img src="images/w.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-31">
+      <img src="images/s.png" width="100px" height="100px" />
+    </div>
+    <div class="tile tile-32">
+      <img src="images/g.png" width="100px" height="100px" />
     </div>
   </body>
 </html>
