--- a/goblin2.html
+++ b/goblin2.html
@@ -7,7 +7,7 @@
     <style>
       body {
         background-image: url("images/goblin3.png");
-
+        background-size: cover;
         background-position: center 10%;
       }
 
@@ -25,82 +25,82 @@
       }
       /* Pozycje kafelków */
       .tile-1 {
-        top: 80%;
-        left: 60%;
+        top: 100%;
+        left: 63%;
       }
 
       .tile-2 {
-        top: 80%;
-        left: 65%;
+        top: 100%;
+        left: 70%;
       }
 
       .tile-3 {
-        top: 80%;
+        top: 100%;
         left: 55%;
       }
       .tile-4 {
-        top: 67%;
+        top: 85%;
         left: 50%;
       }
 
       .tile-5 {
-        top: 80%;
-        left: 75%;
+        top: 100%;
+        left: 83%;
       }
 
       .tile-6 {
-        top: 80%;
-        left: 70%;
+        top: 100%;
+        left: 75%;
       }
       .tile-7 {
-        top: 67%;
+        top: 85%;
         left: 55%;
       }
       .tile-8 {
-        top: 67%;
-        left: 60%;
+        top: 85%;
+        left: 63%;
       }
       .tile-9 {
-        top: 67%;
+        top: 85%;
         left: 70%;
       }
       .tile-10 {
-        top: 67%;
-        left: 75%;
+        top: 85%;
+        left: 82%;
       }
       .tile-11 {
-        top: 67%;
-        left: 65%;
+        top: 85%;
+        left: 75%;
       }
       .tile-12 {
-        top: 67%;
+        top: 85%;
         left: 40%;
       }
       .tile-13 {
-        top: 67%;
+        top: 85%;
         left: 45%;
       }
       .tile-14 {
-        top: 80%;
+        top: 100%;
         left: 40%;
       }
 
       .tile-15 {
-        top: 80%;
+        top: 100%;
         left: 45%;
       }
       .tile-16 {
-        top: 80%;
+        top: 100%;
         left: 50%;
       }
       .tile-17 {
         top: 5%;
-        left: 60%;
+        left: 63%;
       }
 
       .tile-18 {
         top: 5%;
-        left: 65%;
+        left: 70%;
       }
 
       .tile-19 {
@@ -114,12 +114,12 @@
 
       .tile-21 {
         top: 5%;
-        left: 75%;
+        left: 82%;
       }
 
       .tile-22 {
         top: 5%;
-        left: 70%;
+        left: 75%;
       }
       .tile-23 {
         top: 15%;
@@ -127,7 +127,7 @@
       }
       .tile-24 {
         top: 15%;
-        left: 60%;
+        left: 63%;
       }
       .tile-25 {
         top: 15%;
@@ -135,11 +135,11 @@
       }
       .tile-26 {
         top: 15%;
-        left: 75%;
+        left: 82%;
       }
       .tile-27 {
         top: 15%;
-        left: 65%;
+        left: 75%;
       }
       .tile-28 {
         top: 15%;
