--- a/goblin2.html
+++ b/goblin2.html
@@ -6,7 +6,7 @@
     <title>goblin</title>
     <style>
       body {
-        background-image: url("images/goblin3.png");
+        background-image: url("images/mapa.webp");
         background-size: cover;
         background-position: center 10%;
       }
@@ -25,48 +25,48 @@
       }
       /* Pozycje kafelków */
       .tile-1 {
-        top: 100%;
-        left: 63%;
+        top: 99%;
+        left: 69%;
       }
 
       .tile-2 {
-        top: 100%;
-        left: 70%;
+        top: 99%;
+        left: 81%;
       }
 
       .tile-3 {
-        top: 100%;
-        left: 55%;
+        top: 99%;
+        left: 63%;
       }
       .tile-4 {
         top: 85%;
-        left: 50%;
+        left: 45%;
       }
 
       .tile-5 {
-        top: 100%;
-        left: 83%;
+        top: 99%;
+        left: 87%;
       }
 
       .tile-6 {
-        top: 100%;
+        top: 99%;
         left: 75%;
       }
       .tile-7 {
         top: 85%;
-        left: 55%;
+        left: 51%;
       }
       .tile-8 {
         top: 85%;
-        left: 63%;
+        left: 57%;
       }
       .tile-9 {
         top: 85%;
-        left: 70%;
+        left: 63%;
       }
       .tile-10 {
         top: 85%;
-        left: 82%;
+        left: 69%;
       }
       .tile-11 {
         top: 85%;
@@ -74,68 +74,68 @@
       }
       .tile-12 {
         top: 85%;
-        left: 40%;
+        left: 81%;
       }
       .tile-13 {
         top: 85%;
-        left: 45%;
+        left: 87%;
       }
       .tile-14 {
-        top: 100%;
-        left: 40%;
+        top: 99%;
+        left: 45%;
       }
 
       .tile-15 {
-        top: 100%;
-        left: 45%;
+        top: 99%;
+        left: 51%;
       }
       .tile-16 {
-        top: 100%;
-        left: 50%;
+        top: 99%;
+        left: 57%;
       }
       .tile-17 {
         top: 5%;
-        left: 63%;
+        left: 69%;
       }
 
       .tile-18 {
         top: 5%;
-        left: 70%;
+        left: 75%;
       }
 
       .tile-19 {
         top: 5%;
-        left: 55%;
+        left: 63%;
       }
       .tile-20 {
         top: 18%;
-        left: 50%;
+        left: 45%;
       }
 
       .tile-21 {
         top: 5%;
-        left: 82%;
+        left: 81%;
       }
 
       .tile-22 {
         top: 5%;
-        left: 75%;
+        left: 87%;
       }
       .tile-23 {
         top: 18%;
-        left: 55%;
+        left: 51%;
       }
       .tile-24 {
         top: 18%;
-        left: 63%;
+        left: 57%;
       }
       .tile-25 {
         top: 18%;
-        left: 70%;
+        left: 63%;
       }
       .tile-26 {
         top: 18%;
-        left: 82%;
+        left: 69%;
       }
       .tile-27 {
         top: 18%;
@@ -143,24 +143,24 @@
       }
       .tile-28 {
         top: 18%;
-        left: 40%;
+        left: 81%;
       }
       .tile-29 {
         top: 18%;
-        left: 45%;
+        left: 87%;
       }
       .tile-30 {
         top: 5%;
-        left: 40%;
+        left: 45%;
       }
 
       .tile-31 {
         top: 5%;
-        left: 45%;
+        left: 51%;
       }
       .tile-32 {
         top: 5%;
-        left: 50%;
+        left: 57%;
       }
 
       a {
