--- a/kosmos.html
+++ b/kosmos.html
@@ -24,8 +24,8 @@
       }
       /* Pozycje kafelków */
       .tile-1 {
-        top: 70%;
-        left: 60%;
+        top: 87%;
+        left: 70%;
       }
 
       .tile-2 {
@@ -39,17 +39,17 @@
       }
       .tile-4 {
         top: 40%;
-        left: 20%;
+        left: 35%;
       }
 
       .tile-5 {
-        top: 20%;
+        top: 25%;
         left: 50%;
       }
 
       .tile-6 {
-        top: 20%;
-        left: 80%;
+        top: 15%;
+        left: 65%;
       }
       a {
         color: azure;
@@ -170,7 +170,7 @@
     </div>
     <div class="tile tile-5">
       <div class="tooltip">
-        <a href="drzewo1.html">
+        <a href="mapa4.html">
           <img src="images/3.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Expertus</h5></span></a
         >
@@ -179,7 +179,7 @@
     <div class="tile tile-6">
       <div class="tooltip">
         <a href="goblin2.html">
-          <img src="images/5.png" width="100px" height="100px" />
+          <img src="images/4.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Magister</h5></span></a
         >
       </div>
