--- a/mapa4.html
+++ b/mapa4.html
@@ -5,8 +5,8 @@
     <title>mapa4</title>
     <style>
       body {
-        background-size: cover;
         background-image: url("images/mapa4.jpg");
+        background-size: auto;
       }
 
       .kafelek {
