--- a/s.html
+++ b/s.html
@@ -13,7 +13,7 @@
       .board {
         top: 10%;
         left: 55%;
-        background-color: #f0f0f0;
+        background-image: url("images/m.jpg");
         width: 400px;
         height: 400px;
         position: relative;
@@ -119,59 +119,55 @@
     </div>
 
     <div class="board">
-      <div class="tile1 tile1-1">
-        <img src="images/q.png" width="100%" height="100%" />
-      </div>
-
       <div class="tile tile-1">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/w.png" width="100%" height="100%" />
       </div>
 
       <div class="tile tile-2">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/g.png" width="100%" height="100%" />
       </div>
       <div class="tile tile-3">
         <img src="images/q.png" width="100%" height="100%" />
       </div>
       <div class="tile tile-4">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/s.png" width="100%" height="100%" />
       </div>
       <div class="tile tile-5">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/p.png" width="100%" height="100%" />
       </div>
       <div class="tile tile-6">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/p.png" width="100%" height="100%" />
       </div>
       <div class="tile tile-7">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/p.png" width="100%" height="100%" />
       </div>
       <div class="tile tile-8">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/p.png" width="100%" height="100%" />
       </div>
-
+      <!-- ----------------------------------- -->
       <div class="tile1 tile1-1">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/s.png" width="100%" height="100%" />
       </div>
       <div class="tile1 tile1-2">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/k.png" width="100%" height="100%" />
       </div>
       <div class="tile1 tile1-3">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/g.png" width="100%" height="100%" />
       </div>
       <div class="tile1 tile1-4">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/w.png" width="100%" height="100%" />
       </div>
       <div class="tile1 tile1-5">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/p.png" width="100%" height="100%" />
       </div>
       <div class="tile1 tile1-6">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/p.png" width="100%" height="100%" />
       </div>
       <div class="tile1 tile1-7">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/p.png" width="100%" height="100%" />
       </div>
       <div class="tile1 tile1-8">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/p.png" width="100%" height="100%" />
       </div>
     </div>
   </body>
