--- a/s.html
+++ b/s.html
@@ -23,7 +23,7 @@
         width: 12.5%;
         height: 12.5%;
 
-        background-color: white;
+        background-color: whitesmoke;
         transition: background-color 0.3s ease, box-shadow 0.3s ease,
           transform 0.3s ease;
       }
@@ -65,12 +65,84 @@
         left: 87.5%;
       }
 
+      .tile-9 {
+        top: 25%;
+      }
+
+      .tile-10 {
+        top: 25%;
+        left: 25%;
+      }
+
+      .tile-11 {
+        top: 25%;
+        left: 50%;
+      }
+
+      .tile-12 {
+        top: 25%;
+        left: 75%;
+      }
+
+      .tile-13 {
+        top: 37.5%;
+        left: 12.5%;
+      }
+      .tile-14 {
+        top: 37.5%;
+        left: 37.5%;
+      }
+      .tile-15 {
+        top: 37.5%;
+        left: 62.5%;
+      }
+      .tile-16 {
+        top: 37.5%;
+        left: 87.5%;
+      }
+
+      .tile-17 {
+        top: 50%;
+      }
+
+      .tile-18 {
+        top: 50%;
+        left: 25%;
+      }
+
+      .tile-19 {
+        top: 50%;
+        left: 50%;
+      }
+
+      .tile-20 {
+        top: 50%;
+        left: 75%;
+      }
+
+      .tile-21 {
+        top: 62.5%;
+        left: 12.5%;
+      }
+      .tile-22 {
+        top: 62.5%;
+        left: 37.5%;
+      }
+      .tile-23 {
+        top: 62.5%;
+        left: 62.5%;
+      }
+      .tile-24 {
+        top: 62.5%;
+        left: 87.5%;
+      }
+
       .tile1 {
         position: absolute;
         width: 12.5%;
         height: 12.5%;
 
-        background-color: rgb(16, 16, 16);
+        background-color: rgb(83, 40, 40);
         transition: background-color 0.3s ease, box-shadow 0.3s ease,
           transform 0.3s ease;
       }
@@ -144,6 +216,22 @@
       <div class="tile tile-8">
         <img src="images/p.png" width="100%" height="100%" />
       </div>
+      <div class="tile tile-9"></div>
+      <div class="tile tile-10"></div>
+      <div class="tile tile-11"></div>
+      <div class="tile tile-12"></div>
+      <div class="tile tile-13"></div>
+      <div class="tile tile-14"></div>
+      <div class="tile tile-15"></div>
+      <div class="tile tile-16"></div>
+      <div class="tile tile-17"></div>
+      <div class="tile tile-18"></div>
+      <div class="tile tile-19"></div>
+      <div class="tile tile-20"></div>
+      <div class="tile tile-21"></div>
+      <div class="tile tile-22"></div>
+      <div class="tile tile-23"></div>
+      <div class="tile tile-24"></div>
       <!-- ----------------------------------- -->
       <div class="tile1 tile1-1">
         <img src="images/s.png" width="100%" height="100%" />
