--- a/s.html
+++ b/s.html
@@ -180,6 +180,77 @@
         top: 12.5%;
         left: 75%;
       }
+      .tile1-9 {
+        top: 25%;
+        left: 12.5%;
+      }
+
+      .tile1-10 {
+        top: 25%;
+        left: 37.5%;
+      }
+
+      .tile1-11 {
+        top: 25%;
+        left: 62.5%;
+      }
+
+      .tile1-12 {
+        top: 25%;
+        left: 87.5%;
+      }
+
+      .tile1-13 {
+        top: 37.5%;
+      }
+      .tile1-14 {
+        top: 37.5%;
+        left: 25%;
+      }
+      .tile1-15 {
+        top: 37.5%;
+        left: 50%;
+      }
+      .tile1-16 {
+        top: 37.5%;
+        left: 75%;
+      }
+
+      .tile1-17 {
+        top: 50%;
+        left: 12.5%;
+      }
+
+      .tile1-18 {
+        top: 50%;
+        left: 37.5%;
+      }
+
+      .tile1-19 {
+        top: 50%;
+        left: 62.5%;
+      }
+
+      .tile1-20 {
+        top: 50%;
+        left: 87.5%;
+      }
+
+      .tile1-21 {
+        top: 62.5%;
+      }
+      .tile1-22 {
+        top: 62.5%;
+        left: 25%;
+      }
+      .tile1-23 {
+        top: 62.5%;
+        left: 50%;
+      }
+      .tile1-24 {
+        top: 62.5%;
+        left: 75%;
+      }
       .zmien3 {
         float: right;
       }
@@ -257,6 +328,22 @@
       <div class="tile1 tile1-8">
         <img src="images/p.png" width="100%" height="100%" />
       </div>
+      <div class="tile1 tile1-9"></div>
+      <div class="tile1 tile1-10"></div>
+      <div class="tile1 tile1-11"></div>
+      <div class="tile1 tile1-12"></div>
+      <div class="tile1 tile1-13"></div>
+      <div class="tile1 tile1-14"></div>
+      <div class="tile1 tile1-15"></div>
+      <div class="tile1 tile1-16"></div>
+      <div class="tile1 tile1-17"></div>
+      <div class="tile1 tile1-18"></div>
+      <div class="tile1 tile1-19"></div>
+      <div class="tile1 tile1-20"></div>
+      <div class="tile1 tile1-21"></div>
+      <div class="tile1 tile1-22"></div>
+      <div class="tile1 tile1-23"></div>
+      <div class="tile1 tile1-24"></div>
     </div>
   </body>
 </html>
