--- a/kosmos.html
+++ b/kosmos.html
@@ -138,7 +138,7 @@
 
     <div class="tile tile-1">
       <div class="tooltip">
-        <a href="drzewo1.html">
+        <a href="szachownica.html">
           <img src="images/4.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Novitius</h5></span></a
         >
@@ -146,7 +146,7 @@
     </div>
     <div class="tile tile-2">
       <div class="tooltip">
-        <a href="drzewo1.html">
+        <a href="s.html">
           <img src="images/6.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Initiatuss</h5></span></a
         >
