--- a/s.html
+++ b/s.html
@@ -6,16 +6,16 @@
     <title>Mapa</title>
     <style>
       body {
-        background-image: url("images/goblin2.png");
+        background-image: url("images/mapa.webp");
         background-size: cover;
       }
 
       .board {
-        top: 10%;
-        left: 55%;
+        top: 15%;
+        left: 43%;
         background-image: url("images/m.jpg");
-        width: 400px;
-        height: 400px;
+        width: 600px;
+        height: 600px;
         position: relative;
       }
       .tile {
@@ -137,6 +137,41 @@
         left: 87.5%;
       }
 
+      .tile-25 {
+        top: 75%;
+      }
+
+      .tile-26 {
+        top: 75%;
+        left: 25%;
+      }
+
+      .tile-27 {
+        top: 75%;
+        left: 50%;
+      }
+
+      .tile-28 {
+        top: 75%;
+        left: 75%;
+      }
+      .tile-29 {
+        top: 87.5%;
+        left: 12.5%;
+      }
+      .tile-30 {
+        top: 87.5%;
+        left: 37.5%;
+      }
+      .tile-31 {
+        top: 87.5%;
+        left: 62.5%;
+      }
+      .tile-32 {
+        top: 87.5%;
+        left: 87.5%;
+      }
+
       .tile1 {
         position: absolute;
         width: 12.5%;
@@ -251,6 +286,40 @@
         top: 62.5%;
         left: 75%;
       }
+      .tile1-25 {
+        top: 75%;
+        left: 12.5%;
+      }
+
+      .tile1-26 {
+        top: 75%;
+        left: 37.5%;
+      }
+
+      .tile1-27 {
+        top: 75%;
+        left: 62.5%;
+      }
+
+      .tile1-28 {
+        top: 75%;
+        left: 87.5%;
+      }
+      .tile1-29 {
+        top: 87.5%;
+      }
+      .tile1-30 {
+        top: 87.5%;
+        left: 25%;
+      }
+      .tile1-31 {
+        top: 87.5%;
+        left: 50%;
+      }
+      .tile1-32 {
+        top: 87.5%;
+        left: 75%;
+      }
       .zmien3 {
         float: right;
       }
@@ -258,7 +327,7 @@
   </head>
   <body>
     <div class="zmien3">
-      <a href="mapa.html"><button>Wróć</button></a>
+      <a href="kosmos.html"><button>Wróć</button></a>
     </div>
 
     <div class="board">
@@ -270,7 +339,7 @@
         <img src="images/g.png" width="100%" height="100%" />
       </div>
       <div class="tile tile-3">
-        <img src="images/q.png" width="100%" height="100%" />
+        <img src="images/k.png" width="100%" height="100%" />
       </div>
       <div class="tile tile-4">
         <img src="images/s.png" width="100%" height="100%" />
@@ -303,12 +372,36 @@
       <div class="tile tile-22"></div>
       <div class="tile tile-23"></div>
       <div class="tile tile-24"></div>
+      <div class="tile tile-25">
+        <img src="images/p2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile tile-26">
+        <img src="images/p2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile tile-27">
+        <img src="images/p2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile tile-28">
+        <img src="images/p2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile tile-29">
+        <img src="images/s2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile tile-30">
+        <img src="images/q2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile tile-31">
+        <img src="images/g2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile tile-32">
+        <img src="images/w2.png" width="100%" height="100%" />
+      </div>
       <!-- ----------------------------------- -->
       <div class="tile1 tile1-1">
         <img src="images/s.png" width="100%" height="100%" />
       </div>
       <div class="tile1 tile1-2">
-        <img src="images/k.png" width="100%" height="100%" />
+        <img src="images/q.png" width="100%" height="100%" />
       </div>
       <div class="tile1 tile1-3">
         <img src="images/g.png" width="100%" height="100%" />
@@ -344,6 +437,30 @@
       <div class="tile1 tile1-22"></div>
       <div class="tile1 tile1-23"></div>
       <div class="tile1 tile1-24"></div>
+      <div class="tile1 tile1-25">
+        <img src="images/p2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile1 tile1-26">
+        <img src="images/p2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile1 tile1-27">
+        <img src="images/p2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile1 tile1-28">
+        <img src="images/p2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile1 tile1-29">
+        <img src="images/w2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile1 tile1-30">
+        <img src="images/g2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile1 tile1-31">
+        <img src="images/k2.png" width="100%" height="100%" />
+      </div>
+      <div class="tile1 tile1-32">
+        <img src="images/s2.png" width="100%" height="100%" />
+      </div>
     </div>
   </body>
 </html>
