--- a/s.html
+++ b/s.html
@@ -6,17 +6,25 @@
     <title>Mapa</title>
     <style>
       body {
-        background-image: url("images/mapa.webp");
+        background-color: black;
         background-size: cover;
       }
 
       .board {
-        top: 15%;
-        left: 43%;
+        float: left;
+        margin-top: 10%;
+        top: 10%;
+        left: 5%;
         background-image: url("images/m.jpg");
-        width: 600px;
-        height: 600px;
+        width: 400px;
+        height: 400px;
         position: relative;
+      }
+      .goblin {
+        margin-left: 15%;
+        margin-top: 5%;
+        width: 400px;
+        float: left;
       }
       .tile {
         position: absolute;
@@ -329,7 +337,7 @@
     <div class="zmien3">
       <a href="kosmos.html"><button>Wróć</button></a>
     </div>
-
+    <div class="goblin"><img src="images/gob.png" /></div>
     <div class="board">
       <div class="tile tile-1">
         <img src="images/w.png" width="100%" height="100%" />
