--- a/szachownica.html
+++ b/szachownica.html
@@ -6,18 +6,25 @@
     <title>Mapa</title>
     <style>
       body {
-        background-image: url("images/mapa.webp");
+        background-color: black;
         background-size: cover;
       }
 
       .board {
+        float: left;
         margin-top: 10%;
         top: 10%;
-        left: 55%;
+        left: 5%;
         background-image: url("images/m.jpg");
         width: 400px;
         height: 400px;
         position: relative;
+      }
+      .goblin {
+        margin-left: 15%;
+        margin-top: 5%;
+        width: 400px;
+        float: left;
       }
       .tile {
         position: absolute;
@@ -329,6 +336,7 @@
       <a href="kosmos.html"><button>Wróć</button></a>
     </div>
 
+    <div class="goblin"><img src="images/gob.png" /></div>
     <div class="board">
       <div class="tile tile-1">
         <img src="images/w.png" width="100%" height="100%" />
