--- a/szachownica.html
+++ b/szachownica.html
@@ -39,6 +39,9 @@
         box-shadow: 0 8px 16px rgba(38, 38, 38, 0.6); /* Dodajemy świecący efekt */
         transform: scale(1.1); /* Powiększamy kafelek o 10% */
       }
+      .tile.tile-16:hover {
+        background-color: red;
+      }
 
       .tile-1 {
       }
