--- a/s.html
+++ b/s.html
@@ -41,6 +41,10 @@
         transform: scale(1.1); /* Powiększamy kafelek o 10% */
       }
 
+      .tile.tile-16:hover {
+        background-color: red;
+      }
+
       .tile-1 {
       }
 
