--- a/kosmos.html
+++ b/kosmos.html
@@ -25,12 +25,12 @@
       /* Pozycje kafelków */
       .tile-1 {
         top: 87%;
-        left: 70%;
+        left: 60%;
       }
 
       .tile-2 {
         top: 90%;
-        left: 50%;
+        left: 40%;
       }
 
       .tile-3 {
@@ -39,17 +39,17 @@
       }
       .tile-4 {
         top: 40%;
-        left: 35%;
+        left: 30%;
       }
 
       .tile-5 {
-        top: 25%;
+        top: 22%;
         left: 50%;
       }
 
       .tile-6 {
         top: 15%;
-        left: 65%;
+        left: 62%;
       }
       a {
         color: azure;
@@ -111,6 +111,10 @@
           top: 20%;
           left: 80%;
         }
+        .tile-1 {
+          top: 80%;
+          left: 80%;
+        }
       }
       @media (max-width: 320px) {
         body {
@@ -122,7 +126,7 @@
         }
         .tile-1 {
           top: 20%;
-          left: 60%;
+          left: 80%;
         }
       }
     </style>
@@ -138,7 +142,7 @@
 
     <div class="tile tile-1">
       <div class="tooltip">
-        <a href="szachownica.html">
+        <a href="kraina.html">
           <img src="images/4.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Novitius</h5></span></a
         >
@@ -146,7 +150,7 @@
     </div>
     <div class="tile tile-2">
       <div class="tooltip">
-        <a href="s.html">
+        <a href="#">
           <img src="images/6.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Initiatuss</h5></span></a
         >
@@ -154,7 +158,7 @@
     </div>
     <div class="tile tile-3">
       <div class="tooltip">
-        <a href="kraina.html">
+        <a href="#">
           <img src="images/1.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Discipulus</h5></span></a
         >
@@ -162,7 +166,7 @@
     </div>
     <div class="tile tile-4">
       <div class="tooltip">
-        <a href="drzewo1.html">
+        <a href="#">
           <img src="images/2.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Peritus</h5></span></a
         >
@@ -170,7 +174,7 @@
     </div>
     <div class="tile tile-5">
       <div class="tooltip">
-        <a href="mapa4.html">
+        <a href="#">
           <img src="images/3.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Expertus</h5></span></a
         >
@@ -178,7 +182,7 @@
     </div>
     <div class="tile tile-6">
       <div class="tooltip">
-        <a href="goblin2.html">
+        <a href="#">
           <img src="images/4.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Magister</h5></span></a
         >
