--- a/kraina.html
+++ b/kraina.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kraina</title>
+    <title>Szachownica</title>
     <style>
       body {
         background-image: url("images/kont.png");
@@ -98,13 +98,13 @@
     </div>
 
     <div class="tile tile-1">
-      <a href="mapa.html"
+      <a href="#"
         ><img src="images/wulkan.png" width="100" height="100" />Końcówki</a
       >
     </div>
 
     <div class="tile tile-2">
-      <a href="mapa.html"
+      <a href="#"
         ><img src="images/kon2.png" width="100" height="100" />Strategia</a
       >
     </div>
@@ -114,7 +114,7 @@
       >
     </div>
     <div class="tile tile-3">
-      <a href="mapa.html"
+      <a href="#"
         ><img src="images/zam.png" width="100" height="100" />Taktyka</a
       >
     </div>
