--- a/mapa.html
+++ b/mapa.html
@@ -101,9 +101,11 @@
       <h2>🔒</h2></a>
     </div>
     <div class="tile tile-2"><h2>🔒</h2></div>
-    <div class="tile tile-3"><h3>🔒</h3></div>
-    <div class="tile tile-5"><a href="zamek.html"><h1>⬇️</h1></a></div>
-    <div class="tile tile-4"><a href="jezioro.html"><h1>⬇️</h1></a></div>
+    <div class="tile tile-3"><h2>🔒</h2></div>
+    <div class="tile tile-5"><a href="zamek.html"><h2>🔓
+</h2></a></div>
+    <div class="tile tile-4"><a href="jezioro.html"><h2>🔓
+</h2></a></div>
     
   </body>
 </html>
