--- a/szachownica.html
+++ b/szachownica.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mapa</title>
+    <title>Szachownica</title>
     <style>
       body {
         background-color: black;
@@ -12,18 +12,17 @@
 
       .board {
         float: left;
-        margin-top: 10%;
-        top: 10%;
+
         left: 5%;
         background-image: url("images/m.jpg");
-        width: 400px;
-        height: 400px;
+        width: 700px;
+        height: 700px;
         position: relative;
       }
       .goblin {
-        margin-left: 15%;
-        margin-top: 5%;
-        width: 400px;
+        margin-left: 5%;
+        margin-top: 30%;
+        width: 300px;
         float: left;
       }
       .tile {
@@ -339,7 +338,7 @@
       <a href="kosmos.html"><button>Wróć</button></a>
     </div>
 
-    <div class="goblin"><img src="images/gob.png" /></div>
+    <div class="goblin"><img src="images/gob.png" width="75%" /></div>
     <div class="board">
       <div class="tile tile-1">
         <img src="images/w.png" width="100%" height="100%" />
