--- a/szachownica2.html
+++ b/szachownica2.html
@@ -12,18 +12,18 @@
 
       .board {
         float: left;
-        margin-top: 10%;
+
         top: 10%;
-        left: 5%;
+
         background-image: url("images/m.jpg");
-        width: 400px;
-        height: 400px;
+        width: 700px;
+        height: 700px;
         position: relative;
       }
       .goblin {
-        margin-left: 15%;
-        margin-top: 5%;
-        width: 400px;
+        margin-left: 5%;
+        margin-top: 30%;
+        width: 300px;
         float: left;
       }
       .tile {
@@ -341,7 +341,7 @@
     <div class="zmien3">
       <a href="kosmos.html"><button>Wróć</button></a>
     </div>
-    <div class="goblin"><img src="images/gob.png" /></div>
+    <div class="goblin"><img src="images/gob.png" width="200px" /></div>
     <div class="board">
       <div class="tile tile-1">
         <img src="images/w.png" width="100%" height="100%" />
