--- a/kraina.html
+++ b/kraina.html
@@ -19,16 +19,11 @@
         transition: background-color 0.3s ease, box-shadow 0.3s ease,
           transform 0.3s ease;
         border-radius: 8px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        
       }
 
       .tile:hover {
-        background-color: rgba(
-          255,
-          204,
-          0,
-          0.8
-        ); /* Zmieniamy kolor na żółty po najechaniu */
+        
         box-shadow: 0 8px 16px rgba(255, 204, 0, 0.6); /* Dodajemy świecący efekt */
         transform: scale(1.1); /* Powiększamy kafelek o 10% */
       }
@@ -83,6 +78,30 @@
         margin-top: 1%; /* Odstęp między obrazkiem a napisem */
         color: #f4f0f0; /* Kolor tekstu */
       }
+      .tooltip {
+        cursor: pointer;
+      }
+      .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 50px; /* Zmieniona szerokość dymka */
+        background-color: rgba(0, 0, 0, 0.7);
+        color: #fff;
+        text-align: center;
+        border-radius: 5px;
+        padding: 1px; /* Zwiększony padding (odstępy wewnętrzne dymka) */
+        position: absolute;
+        z-index: 1;
+        top: 25%; /* Ustawienie dymka poniżej tekstu */
+        left: 110%;
+        opacity: 0;
+        transition: opacity 0.3s;
+        font-size: 10px; /* Zmieniony rozmiar tekstu w dymku */
+      }
+
+      .tooltip:hover .tooltiptext {
+        visibility: visible;
+        opacity: 1;
+      }
       .zmien3 {
         float: right;
       }
@@ -98,25 +117,31 @@
     </div>
 
     <div class="tile tile-1">
-      <a href="#"
-        ><img src="images/wulkan.png" width="100" height="100" />Końcówki</a
-      >
+      <div class="tooltip">
+        <a href="#"
+          ><img src="images/wulkan.png" width="100" height="100" />
+          <span class="tooltiptext"><h3>Końcówki</h3></span></a
+        >
+      </div>
     </div>
 
     <div class="tile tile-2">
-      <a href="#"
-        ><img src="images/kon2.png" width="100" height="100" />Strategia</a
-      >
+      <div class="tooltip">
+        <a href="#"
+          ><img src="images/kon2.png" width="100" height="100" /> <span class="tooltiptext"><h3>Strategia</h3></span></a
+        ></a
+        >
+      </div>
     </div>
-    <div class="tile tile-4">
+    <div class="tile tile-3"> <div class="tooltip">
+      <a href="#"
+        ><img src="images/zam.png" width="100" height="100" /><span class="tooltiptext"><h3>Taktyka</h3></span></a
+      >
+    </div></div>
+    <div class="tile tile-4"><div class="tooltip">
       <a href="mapa.html"
-        ><img src="images/mapa2.png" width="100" height="100" />Otwarcia</a
+        ><img src="images/zam.png" width="100" height="100" /><span class="tooltiptext"><h3>Otwarcia</h3></span></a
       >
-    </div>
-    <div class="tile tile-3">
-      <a href="#"
-        ><img src="images/zam.png" width="100" height="100" />Taktyka</a
-      >
-    </div>
+    </div></div>
   </body>
 </html>
