--- a/kosmos.html
+++ b/kosmos.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kosmos</title>
+    <title>Kosmos</title>
     <style>
       body {
         background-image: url("images/kosmos.jpeg");
