--- a/rodzina.html
+++ b/rodzina.html
@@ -96,6 +96,18 @@
       .zmien3 {
         float: right;
       }
+      @media (max-width: 1200px) {
+        body {
+          background-size: 1200px 900px;
+        }
+      }
+
+      @media (max-width: 768px) {
+        .carousel-container {
+          display: contents;
+          gap: 0%;
+        }
+      }
     </style>
   </head>
   <body>
