--- a/hi.html
+++ b/hi.html
@@ -8,7 +8,12 @@
       body {
         background-image: url("images/drzewo2.png");
         background-size: cover;
-        background-position: center; /* Wyśrodkowanie tła */
+        background-position: center 70%;
+
+        text-align: center;
+        margin: 0;
+        height: 100vh;
+        cursor: pointer;
       }
       #container {
         width: 1000px;
