--- a/kraina.html
+++ b/kraina.html
@@ -50,7 +50,7 @@
 
       .tile-4 {
         top: 70%;
-        left: 80%;
+        left: 65%;
       }
 
       .tile-5 {
@@ -105,6 +105,10 @@
       .zmien3 {
         float: right;
       }
+       @media (max-width: 768px) {
+        body {
+          background-size: 768px 1365px;
+        }}
     </style>
   </head>
   <body>
