--- a/mapa.html
+++ b/mapa.html
@@ -83,6 +83,10 @@
         float: right;
        
       }
+       @media (max-width: 768px) {
+        body {
+          background-size: 768px 1365px;
+        }}
     </style>
   </head>
   <body>
