--- a/zamek.html
+++ b/zamek.html
@@ -8,8 +8,13 @@
       body {
     
   background-image: url("images/zamek.png");
-  background-size: cover;
-  background-position: center; /* Wyśrodkowanie tła */
+ background-size: cover;
+        background-position: center 30%;
+        background-attachment: fixed;
+        text-align: center;
+        margin: 0;
+        height: 100vh;
+        cursor: pointer;
       }
 
       .tile {
