--- a/kosmos.html
+++ b/kosmos.html
@@ -150,7 +150,7 @@
     </div>
     <div class="tile tile-2">
       <div class="tooltip">
-        <a href="#">
+        <a href="test.html">
           <img src="images/6.png" width="100px" height="100px" />
           <span class="tooltiptext"><h3>Initiatuss</h3></span></a
         >
