--- a/mapa3.html
+++ b/mapa3.html
@@ -100,7 +100,7 @@
   </head>
   <body>
     <div class="zmien3">
-      <a href="jezioro.html"><button>Wróć</button></a>
+      <a href="test.html"><button>Wróć</button></a>
     </div>
     <a href="strona1.html" id="kafelek1" class="kafelek">
       <div class="tekst">5.d3</div>
