--- a/szachownica.html
+++ b/szachownica.html
@@ -335,7 +335,7 @@
   </head>
   <body>
     <div class="zmien3">
-      <a href="kosmos.html"><button>Wróć</button></a>
+      <a href="test.html"><button>Wróć</button></a>
     </div>
 
     <div class="goblin"><img src="images/gob.png" width="75%" /></div>
