--- a/szachownica2.html
+++ b/szachownica2.html
@@ -339,7 +339,7 @@
   </head>
   <body>
     <div class="zmien3">
-      <a href="kosmos.html"><button>Wróć</button></a>
+      <a href="test.html"><button>Wróć</button></a>
     </div>
     <div class="goblin"><img src="images/gob.png" width="200px" /></div>
     <div class="board">
