--- a/kraina.html
+++ b/kraina.html
@@ -123,8 +123,8 @@
     <div class="tile tile-1">
       <div class="tooltip">
         <a href="#"
-          ><img src="images/wulkan.png" width="100" height="100" />
-          <span class="tooltiptext"><h3>Końcówki</h3></span></a
+          ><img src="images/13.webp" width="100" height="100" />
+          <span class="tooltiptext"><h3>Ducatus Ludi Finalis</h3></span></a
         >
       </div>
     </div>
@@ -132,20 +132,30 @@
     <div class="tile tile-2">
       <div class="tooltip">
         <a href="#"
-          ><img src="images/kon2.png" width="100" height="100" /> <span class="tooltiptext"><h3>Strategia</h3></span></a
+          ><img src="images/12.png" width="100" height="100" /> <span class="tooltiptext"><h3>Ducatus Strategiae</h3></span></a
         ></a
         >
       </div>
     </div>
     <div class="tile tile-3"> <div class="tooltip">
       <a href="#"
-        ><img src="images/zam.png" width="100" height="100" /><span class="tooltiptext"><h3>Taktyka</h3></span></a
+        ><img src="images/13.webp" width="100" height="100" /><span class="tooltiptext"><h3>Ducatus Tacticae</h3></span></a
       >
     </div></div>
     <div class="tile tile-4"><div class="tooltip">
       <a href="mapa.html"
-        ><img src="images/zam.png" width="100" height="100" /><span class="tooltiptext"><h3>Otwarcia</h3></span></a
+        ><img src="images/13.webp" width="100" height="100" /><span class="tooltiptext"><h3>Ducatus Initii Ludi
+</h3></span></a
       >
     </div></div>
+    
+    <div class="tile tile-5">
+      <div class="tooltip">
+        <a href="#"
+          ><img src="images/11.png" width="100" height="100" />
+          <span class="tooltiptext"><h3>Ducatus Senioris</h3></span></a
+        >
+      </div>
+    </div>
   </body>
 </html>
