--- a/index2.html
+++ b/index2.html
@@ -352,7 +352,7 @@
           console.log("Automatyczne odtwarzanie zablokowane:", error);
           // Poinformuj użytkownika, że musi kliknąć, aby odtworzyć muzykę
           alert(
-            'Twoja przeglądarka zablokowała automatyczne odtwarzanie muzyki. Kliknij "Odtwórz / Zatrzymaj muzykę", aby ją włączyć.'
+            'Twoja przeglądarka zablokowała automatyczne odtwarzanie muzyki. Kliknij "Odtwórz / Zatrzymaj ", aby ją włączyć.'
           );
         });
       });
