--- a/index2.html
+++ b/index2.html
@@ -211,33 +211,25 @@
       }
 
       .music-button {
-        padding: 15px 25px; /* Zwiększono padding dla lepszego wyglądu okrągłego przycisku */
-        margin-top: 30px; /* Dodano trochę odstępu od dołu innych elementów */
-        font-size: 110%; /* Lekko zmniejszony rozmiar czcionki, aby pasował do okrągłego kształtu */
         cursor: pointer;
-        background-color: #eba627; /* Jasny, bursztynowy kolor tła */
-        color: #000000; /* Czarny kolor tekstu dla kontrastu */
-        border: 3px solid #f1f1f1; /* Grubsza biała ramka */
-        border-radius: 50%; /* Sprawia, że przycisk jest okrągły */
+        background-color: #350bc0; /* Jasny, bursztynowy kolor tła */
+        color: white; /* Czarny kolor tekstu dla kontrastu */
+        padding: 1%;
         transition: all 0.3s ease;
-        width: 100px; /* Ustalona szerokość dla lepszego okrągłego kształtu */
-        height: 100px; /* Ustalona wysokość dla lepszego okrągłego kształtu */
+        width: 5%; /* Ustalona szerokość dla lepszego okrągłego kształtu */
+
         display: flex; /* Umożliwia centrowanie tekstu w pionie i poziomie */
         align-items: center; /* Centruje tekst w pionie */
         justify-content: center; /* Centruje tekst w poziomie */
-        text-align: center; /* Wyrównuje tekst w przypadku wielu linii */
-        line-height: 1.2; /* Dostosuj, jeśli tekst jest wieloliniowy */
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4); /* Delikatny cień dla głębi */
       }
 
       .music-button:hover {
-        background-color: #f5b342; /* Jaśniejszy bursztyn po najechaniu */
-        color: #333; /* Ciemniejszy tekst po najechaniu */
+        background-color: #350bc0; /* Jaśniejszy bursztyn po najechaniu */
+        color: #bebaba; /* Ciemniejszy tekst po najechaniu */
         border-color: #fff; /* Biała ramka po najechaniu */
         transform: scale(
           1.05
         ); /* Lekko mniejsze powiększenie, aby nie wychodził za bardzo */
-        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6); /* Wyraźniejszy cień po najechaniu */
       }
     </style>
   </head>
@@ -329,18 +321,20 @@
         <label for="slide-radio4" class="dot" title="Slajd 4"></label>
       </div>
     </div>
+
+    <button id="toggle-music" class="music-button">▶⏸</button>
+    <audio id="background-music">
+      <source src="Prolog.mp3" type="audio/mp3" />
+      Twój przeglądarka nie obsługuje elementu audio.
+    </audio>
+
     <div class="content">
       <h1>Strona magii szachowej</h1>
       <a href="karta5.html"><button>Uczeń Maga</button></a>
       <a href="mag.html"><button>Mag</button></a>
       <a href="zajecia.html"><button>Nauczyciel</button></a>
     </div>
-    <audio id="background-music" loop>
-      <source src="Prolog.mp3" type="audio/mp3" />
-      Twój przeglądarka nie obsługuje elementu audio.
-    </audio>
 
-    <button id="toggle-music" class="music-button">Odtwórz/ Zatrzymaj</button>
     <script>
       const backgroundMusic = document.getElementById("background-music");
       const toggleMusicButton = document.getElementById("toggle-music");
