--- a/drzewo2.html
+++ b/drzewo2.html
@@ -127,7 +127,7 @@
       <div class="image-caption">Gandalf</div>
     </div>
     <div class="zmien3">
-      <a href="drzewo1.html"><button>Wróć</button></a>
+      <a href="mapa3.html"><button>Wróć</button></a>
     </div>
 
     <div class="tile tile-2">
@@ -148,7 +148,7 @@
     </div>
     <div class="tile tile-4">
       <div class="tooltip">
-        <a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"
+        <a href="drzewo4.html"
           ><img src="images/kras.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Typowe pozycje</h5></span></a
         >
@@ -164,7 +164,7 @@
     </div>
     <div class="tile tile-6">
       <div class="tooltip">
-        <a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"
+        <a href="https://lichess.org/study/PREMgz5Z" target="_blank"
           ><img src="images/mag3.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Plany gry</h5></span></a
         >
