--- a/jezioro.html
+++ b/jezioro.html
@@ -146,18 +146,18 @@
     </div>
     <div class="tile tile-2">
       <div class="tooltip">
-        <a href="drzewo1.html">
+        <a href="#">
           <img src="images/duck.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Giuoco Piano</h5></span></a
+          <span class="tooltiptext"><h5>Atak Maxa Lange</h5></span></a
         >
       </div>
     </div>
 
     <div class="tile tile-3">
       <div class="tooltip">
-        <a href="#"
+        <a href="mapa3.html"
           ><img src="images/ogr.png" width="100px" height="100px" />
-          <span class="tooltiptext"><h5>Atak Maxa Lange</h5></span></a
+          <span class="tooltiptext"><h5>Giuoco Piano</h5></span></a
         >
       </div>
     </div>
