--- a/mapa3.html
+++ b/mapa3.html
@@ -100,9 +100,10 @@
   </head>
   <body>
     <div class="zmien3">
-      <a href="test.html"><button>Wróć</button></a>
+      <a href="jezioro.html"><button>Wróć</button></a>
     </div>
-    <a href="strona1.html" id="kafelek1" class="kafelek">
+    <a href="drzewo2.html" id="kafelek1" class="kafelek"
+      >.
       <div class="tekst">5.d3</div>
     </a>
 
