--- a/jezioro.html
+++ b/jezioro.html
@@ -163,7 +163,7 @@
     </div>
     <div class="tile tile-4">
       <div class="tooltip">
-        <a href="drzewo3.html"
+        <a href="#"
           ><img src="images/smok.png" width="100px" height="100px" />
           <span class="tooltiptext"><h5>Obrona dwóch skoczków</h5></span></a
         >
@@ -171,7 +171,7 @@
     </div>
     <div class="tile tile-5">
       <div class="tooltip">
-        <a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"
+        <a href="#"
           ><img src="images/duck.png" width="100px" height="100px" />
           <span class="tooltiptext"
             ><h5>Hungarian Defence Giuoco Pianissimo</h5></span
